# GSSoC_2026_ML-CaPsule

./: .gitignore  AutoML_GSSoC.ipynb  Ensemble learning.md  README.md  ROADMAP.md  Testemotion.py  Visualization  with Seaborn & Matplotlib.ipynb  build_readme.py  requirements.txt
AI_Resume Analyzer/: .gitignore  README.md  ai_suggestions.py  app.py  nlp_utils.py  requirements.txt  skills.py
ANPR_PI/: FIREBASE_INTEGRATION_STATUS.md  HAILO_SETUP.md  IP_CAMERA_SETUP.md  README.md  monitor_firebase.py  requirements.txt  requirements_hailo.txt
Algorithmic_Trading_Strategy_Optimization_Using_Genetic_Algorithms/: Algorithmic_Trading_Strategy_Optimization_Using_Genetic_Algorithms (1).ipynb
Alzheimer's Disease Predictor/: Alzheimer_Disease_predictor.ipynb  README.md  train.py
Animal_Detection_Alert_System/: Detection.py  Readme.md  Requirements.txt  app.py
Association Rule Implementation/: README.md
Audio Classification/: README.md
Audio_Deepfake_Detection/: Audio_Deepfake_Detection.ipynb  README.md
Autism Identification System/: README.md
AutoML_Tabular_Pipeline/: App.py  Preprocessing.py  Utils.py
Automated Financial Reporting with Deep Learning/: app.py
Automatic Comment Generation/: README.md  requirements.txt
Autonomous Research AI Agent/: README.md  app.py  requirements.txt
Finan_AI Financial Advisor/Finan_Web_App/: .gitignore  .replit  app.py  package-lock.json  pyproject.toml  replit.md  requirements.txt
Finan_AI Financial Advisor/Finan_Web_App/static/: app.js  style.css
Finan_AI Financial Advisor/Finan_Web_App/templates/: index.html
(+277 files in other folders)
